FinancialPlanner/force-app/main/default/objects/FP_Transaction__c/FP_Transaction__c.object-meta.xml
<CustomObject>
    <label>FP_Transaction</label>
    <nameField>
        <displayFormat>TX-{000000}</displayFormat>
        <label>Transaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>