FinancialPlanner/force-app/main/default/objects/FP_Transaction__c/fields/Closing_Balance__c.field-meta.xml
<CustomField>
    <fullName>Closing_Balance__c</fullName>
    <label>Closing Balance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>