FinancialPlanner/force-app/main/default/objects/FP_Transaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Type of transaction. Can be either Income or Expense</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>Income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>