FinancialPlanner/force-app/main/default/objects/FP_Transaction__c/fields/UPI_Payment__c.field-meta.xml
<CustomField>
    <fullName>UPI_Payment__c</fullName>
    <formula>CONTAINS( Description__c , &apos;UPI&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UPI Payment</label>
    <type>Checkbox</type>
</CustomField>